--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,20 +3,20 @@ requires = ["setuptools>=64", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "snntorch-ternary"
+name = "snntorch_ternary"
 version = "0.1.0"
 description = "Ternary spiking neuron extensions for snnTorch"
 readme = "README.md"
 requires-python = ">=3.9"
-license = { text = "MIT" }
 authors = [
 	{ name = "Marc DeCarlo", email = "marcadecarlo@gmail.com" }
 ]
 dependencies = [
 	"snntorch>=0.9.0",
-	"torch>=1.12"
+	"torch>=2.6.0",
+	"numpy==2.2.6"
 ]
 
 [project.urls]
-Homepage = ""
-Source = ""
+Homepage = "https://github.com/mdecarlo26/snnTorch_Ternary/tree/main"
+Source = "https://github.com/mdecarlo26/snnTorch_Ternary/tree/main"
